Ignored some more files from project.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 *.bak
 /session.101c2d82741e2f38ed15875521719378700000021640068
 /session.10378941a07c51329715797233461646500000014620065
+/auto-save-list/
+/ac-comphist.dat
+/backups/
+/elpa/
+/transient/
+/bookmarks
+/recentf
+/request/
